--- a/app/_config.yml
+++ b/app/_config.yml
@@ -18,16 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Trying to cross the ocean with Kubernetes!
+email: contact@lucascajal.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal blog of a data engineer sharing his learning experience with Kubernetes
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://blog.lucascajal.com" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  lucascajal
 
 # Build settings
 theme: minima
